updated based on new comments